# nav24

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in  CrossCompilingForArm.cmake
core/: CMakeLists.txt  GlobalConfig.h.in  ProjectFiles.cmake
core/atlas/: Atlas.cpp  Atlas.hpp  Map.cpp  Map.hpp
core/backEnd/: BE_CalibCamCv.cpp  BE_CalibCamCv.hpp  BE_GraphOptim.cpp  BE_GraphOptim.hpp  BackEnd.cpp  BackEnd.hpp  CalibCamCv.cpp  CalibCamCv.hpp  Problem.cpp  Problem.hpp
core/dataTypes/: SmartObject.cpp  SmartObject.hpp
core/dataTypes/frame/: Frame.cpp  Frame.hpp
core/dataTypes/observation/: Observation.cpp  Observation.hpp  Point2D.cpp  Point2D.hpp
core/dataTypes/optimization/: G2oTypes.cc  G2oTypes.h  OptimizableTypes.cpp  OptimizableTypes.hpp
core/dataTypes/sensor/: Sensor.cpp  Sensor.hpp
core/dataTypes/sensor/camera/: Calibration.cpp  Calibration.hpp  Camera.cpp  Camera.hpp
core/dataTypes/sensor/data/: IMU.cpp  Image.cpp  Image.hpp  ImageFilter.hpp  Pose.cpp  Pose.hpp  SensorData.cpp  SensorData.hpp
core/dataTypes/sensor/pose/: PoseProvider.cpp  PoseProvider.hpp
core/dataTypes/sensors/: IMU.hpp  IMU_Hook.cpp  IMU_Hook.hpp  Image.cpp  ImageFilter.cpp  ImageHook.cpp  ImageHook.hpp  Pose.hpp  PoseHook.cpp  PoseHook.hpp
core/dataTypes/worldObject/: Point3D.hpp  WorldObject.cpp  WorldObject.hpp
core/frontEnd/: FE_CalibCamCv.cpp  FE_CalibCamCv.hpp  FE_ObjTracking.cpp  FE_ObjTracking.hpp  FE_SlamMonoV.cpp  FE_SlamMonoV.hpp  FrontEnd.cpp  FrontEnd.hpp
core/operators/: OP_ChBoardDetCv.cpp  OP_ChBoardDetCv.hpp  OP_ObjTracking.cpp  OP_ObjTracking.hpp  OP_ObjTrackingCv.cpp  OP_ObjTrackingCv.hpp  OP_ObjTrackingYolo.cpp  OP_ObjTrackingYolo.hpp  Operator.cpp  Operator.hpp
core/operators/mapInit/: OP_2ViewReconstruction.cpp  OP_2ViewReconstruction.hpp  OP_MapInitialization.cpp  OP_MapInitialization.hpp
core/operators/objAssoc/: OP_FtAssoc.cpp  OP_FtAssoc.hpp  OP_FtAssocOrbSlam.cpp  OP_FtAssocOrbSlam.hpp
core/operators/objDetection/: OP_FtDt.cpp  OP_FtDt.hpp  OP_FtDtOrbSlam.cpp  OP_FtDtOrbSlam.hpp
core/operators/objTracking/: OP_ObjTracking.cpp  OP_ObjTracking.hpp  OP_ObjTrackingCv.cpp  OP_ObjTrackingCv.hpp  OP_ObjTrackingYolo.cpp  OP_ObjTrackingYolo.hpp  OP_ObjTrackingYoloPy.cpp  OP_ObjTrackingYoloPy.hpp
core/scene/: Atlas.cpp  Atlas.hpp  Map.cpp  Map.hpp
core/scene/worldObject/: Point3D.cpp  Point3D.hpp  WorldObject.hpp
core/sensor/: Sensor.hpp
core/sensor/camera/: Calibration.cpp  Calibration.hpp  Camera.cpp  Camera.hpp  MyCalibrator.cpp
core/sensor/camera/models/: GeometricCamera.h  KannalaBrandt8.cpp  KannalaBrandt8.hpp  Pinhole.cpp  Pinhole.hpp  PinholeRadTan.cpp  PinholeRadTan.hpp
core/sensorData/: Image.hpp  SensorData.hpp
core/sensorData/observation/: FeatureGrid.cpp  FeatureGrid.hpp  MatchedFeatures.cpp  MatchedFeatures.hpp  Observation.hpp  Point2D.cpp  Point2D.hpp
core/system/: System.cpp  System.hpp
core/tools/dataConversion/: DataConversion.cpp  DataConversion.hpp  YamlParserCV.cpp  YamlParserCV.hpp
core/tools/dataProviders/: BaseLoader.cpp  BaseLoader.hpp  DataStore.cpp  DataStore.hpp  EurocLoader.cpp  EurocLoader.hpp  SharedQueue.cpp  SharedQueue.hpp  TabularTextDS.cpp  TabularTextDS.hpp  TabularTextWriter.cpp  TabularTextWriter.hpp
core/tools/dataProviders/dataStore/: IMU_DS.cpp  IMU_DS.hpp  ImageDS.cpp  ImageDS.hpp  PoseDS.cpp  PoseDS.hpp  TabularTextDS.cpp  TabularTextDS.hpp
core/tools/messaging/: Channel.cpp  Channel.hpp  Interface.cpp  Interface.hpp  Message.cpp  Message.hpp
core/tools/output/: ImageViewer.cpp  ImageViewer.hpp  MapViewer.cpp  MapViewer.hpp  Output.cpp  Output.hpp  Serial.cpp  Serial.hpp  TabularTextWriter.hpp  Visualization.cpp  Visualization.hpp
core/tools/parameters/: Parameter.cpp  Parameter.hpp  ParameterBlueprint.h  ParameterServer.cpp  ParameterServer.hpp
core/tools/parameters/types/: CamParams.cpp  CamParams.hpp  DS_Params.cpp  DS_Params.hpp  IMU_Params.cpp  IMU_Params.hpp  Parameter.cpp  Parameter.hpp  SensorConfig.cpp  SensorConfig.hpp
core/tools/visualization/: Visualization.cpp  Visualization.hpp
core/tools/yamlParser/: YamlParserCV.cpp  YamlParserCV.hpp
core/trajectory/: TrajManager.cpp  TrajManager.hpp  Trajectory.cpp  Trajectory.hpp
core/trajectory/pose/: Pose.cpp  Pose.hpp
examples/: CMakeLists.txt
examples/roboticArm/: aun_cam_calib.cpp  aun_robo_arm.cpp  aun_robo_arm_py.cpp  aun_serial_test.cpp
examples/slam/: v_mono.cpp
examples/tests/: camera.cpp  cv_yaml_parser.cpp  data_loaders.cpp  data_provider.cpp  messaging.cpp  param_server.cpp  python_api.cpp  serial_test.cpp  tabular_text_ds.cpp  world_viewer.cpp
ros/: CMakeLists.txt  package.xml
ros/core/frontEnd/: FE_ObjTrackingRos.cpp  FE_ObjTrackingRos.hpp
ros/core/loaders/: MVSEC_Loader.cpp  MVSEC_Loader.h
ros/examples/: hello_ros.cpp  python_cpp_yolo.cpp  rosbag_loader.cpp
ros/launch/: yolo_obj_tracking.launch
ros/scripts/: yolo_node.py
scripts/: aun_dl_special.py  aun_obj_tracking.py  prog.py
